<resources>
    <string name="app_name">Slotify</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Email</string>
    <string name="your_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register.</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_slot">Create Slot</string>
    <string name="created_slots">Created Slots</string>
    <string name="available_slots">Available Slots</string>
    <string name="save_slot">Save Slot</string>
    <string name="enter_slot_time_e_g_10_00_am_11_00_am">Enter Slot Time (e.g., 10:00 AM - 11:00 AM)</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="enter_organization_name_admin_only">Enter organization name (Admin only)</string>
    <string name="name">Name</string>
    <string name="book_slot">Book Slot</string>
    <string name="edit_slot">Edit Slot</string>
    <string name="delete_slot">Delete Slot</string>
    <string name="select_date">Select Date</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="no_start_time_selected">No Start Time Selected</string>
    <string name="select_end_time">Select End Time</string>
    <string name="no_end_time_selected">No End Time Selected</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="n_a">N/A</string>
    <string name="search">Search</string>
    <string name="search_organization">Search organization</string>
    <string name="slots">Slots</string>
    <string-array name="user_roles">
        <item>User</item>
        <item>Admin</item>
    </string-array>
</resources>